perf(index): streamline full and incremental indexing